# rostest_example

./: CMakeLists.txt  package.xml
scripts/: wall_detector.py
test/: wall_detector.test  wall_detector_test.py
